--- a/src/full-config.json
+++ b/src/full-config.json
@@ -143,7 +143,7 @@
         "name": "HP Pavilion - Laptop antirreflejos con pantalla táctil HD",
         "price": 171900,
         "originalPrice": 191000,
-        "description": "HP Pavilion - Laptop antirreflejos con pantalla táctil HD. A10-9620P Quad Core, 16GB, 1TB, 15.6 pulgadas (Pantalla). Radeon R5 Windows 10 Laptop.\n\n,Marca: HP\n,Tamaño de pantalla: 15,6 Pulgadas\n,Tamaño del disco duro: 1 TB\n,Modelo de CPU: AMD A Series\n,Tamaño de la memoria RAM instalada:\t16GB\n,Sistema operativo: Windows 10\n,Coprocesador de gráficos: AMD Radeon R5",
+        "description": "HP Pavilion - Laptop antirreflejos con pantalla táctil HD. A10-9620P Quad Core, 16GB, 1TB, 15.6 pulgadas (Pantalla). Radeon R5 Windows 10 Laptop.\n\n-Marca: HP\n-Tamaño de pantalla: 15,6 Pulgadas\n-Tamaño del disco duro: 1 TB\n-Modelo de CPU: AMD A Series\n-Tamaño de la memoria RAM instalada:\t16GB\n-Sistema operativo: Windows 10\nCoprocesador de gráficos: AMD Radeon R5",
         "category": "portátiles",
         "company": "HP",
         "stock": 1,
@@ -1588,7 +1588,7 @@
         "id": "5"
       }
     ],
-    "lastModified": "2025-07-01T07:39:25.108Z"
+    "lastModified": "2025-07-01T07:27:50.768Z"
   },
   "products": [
     {
@@ -1596,7 +1596,7 @@
       "name": "HP Pavilion - Laptop antirreflejos con pantalla táctil HD",
       "price": 171900,
       "originalPrice": 191000,
-      "description": "HP Pavilion - Laptop antirreflejos con pantalla táctil HD. A10-9620P Quad Core, 16GB, 1TB, 15.6 pulgadas (Pantalla). Radeon R5 Windows 10 Laptop.\n\n,Marca: HP\n,Tamaño de pantalla: 15,6 Pulgadas\n,Tamaño del disco duro: 1 TB\n,Modelo de CPU: AMD A Series\n,Tamaño de la memoria RAM instalada:\t16GB\n,Sistema operativo: Windows 10\n,Coprocesador de gráficos: AMD Radeon R5",
+      "description": "HP Pavilion - Laptop antirreflejos con pantalla táctil HD. A10-9620P Quad Core, 16GB, 1TB, 15.6 pulgadas (Pantalla). Radeon R5 Windows 10 Laptop.\n\n-Marca: HP\n-Tamaño de pantalla: 15,6 Pulgadas\n-Tamaño del disco duro: 1 TB\n-Modelo de CPU: AMD A Series\n-Tamaño de la memoria RAM instalada:\t16GB\n-Sistema operativo: Windows 10\nCoprocesador de gráficos: AMD Radeon R5",
       "category": "portátiles",
       "company": "HP",
       "stock": 1,
@@ -3042,7 +3042,7 @@
     }
   ],
   "messages": {},
-  "exportDate": "2025-07-01T07:39:34.654Z",
+  "exportDate": "2025-07-01T07:27:59.460Z",
   "version": "2.0.0",
   "storeInfo": {
     "storeName": "Yero Shop!",
@@ -3181,5 +3181,5 @@
       "cost": 400
     }
   ],
-  "lastModified": "2025-07-01T07:39:25.108Z"
+  "lastModified": "2025-07-01T07:27:50.768Z"
 }
