--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^1.4.0",
     "canvas-confetti": "^1.6.0",
     "dayjs": "^1.11.7",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "jszip": "^3.10.1",
     "jwt-decode": "^3.1.2",
     "jwt-encode": "^1.0.1",
